--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <!-- 인터넷 권한 (AI API 호출용) -->
     <uses-permission android:name="android.permission.INTERNET"/>
-    
+
     <!-- 네트워크 상태 확인 권한 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
@@ -18,18 +18,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ai_Fortune_App"
         tools:targetApi="31">
-        
-        <!-- 메인 액티비티 -->
+
+        <!-- 메인 액티비티 - 전체화면 테마 적용 -->
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Ai_Fortune_App">
+            android:theme="@style/Theme.Ai_Fortune_App.Fullscreen"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        
+
     </application>
 
 </manifest>
